09132022-1721 Set maximum value for candle seekbar Set default values for switches and seekbar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,9 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:max="5"
+                android:progress="2" />
 
         </LinearLayout>
 
@@ -79,6 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
+                android:checked="true"
                 android:text="Frosting" />
 
             <Switch
@@ -86,6 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
+                android:checked="true"
                 android:text="Candles" />
         </LinearLayout>
 
